# semsearch

./: .gitignore  LICENSE  README.md  bun.lockb  cli.ts  crawler.ts  duckdbtest.ts  indexer.ts  package.json  pyproject.toml  search.ts  test.ts
semsearch/: __main__.py  cli.py  config.py  crawler.py  html_utils.py  indexer.py  migrate.py  model_download.py  nlp.py  search.py  setup_models.py
semsearch/core/: config.py  html_utils.py  search.py  thread_utils.py  tui_util.py
semsearch/crawl/: blocks.py  content_filter.py  crawler.py  html_utils.py  language.py  main_content.py  metadata.py  robots.py  sitemap.py
semsearch/index/: chunking.py  embedding_batch.py  embedding_config.py  embedding_model.py  embeddings.py  force_flags.py  indexer.py  nlp.py
semsearch/search/: dedup.py  fusion.py  index_store.py  ranking.py  search.py  semantic.py  snippet.py
semsearch/storage/: __init__.py  content.py  content_codec.py  content_migrate.py  content_models.py  embedding_cache.py  models.py  page.py  schema_migrate.py  sqlite_config.py  token_cache.py  url_intern.py  vector_codec.py
semsearch/tests/: test_cli.py  test_model_download.py
semsearch/tests/crawl/: test_blocks.py  test_content_filter.py  test_crawler_utils.py  test_language.py  test_main_content.py  test_metadata.py  test_robots.py  test_sitemap.py
semsearch/tests/index/: test_cached_embeddings.py  test_chunking.py  test_embedding_batch.py  test_embedding_model.py  test_embeddings.py  test_force_flags.py  test_incremental.py  test_indexer_cli.py  test_nlp.py
semsearch/tests/search/: test_fusion.py  test_index_store.py  test_ranking.py  test_search.py  test_semantic.py  test_snippet.py
semsearch/tests/storage/: test_async_page.py  test_content.py  test_content_migrate.py  test_embedding_cache.py  test_models.py  test_page.py  test_schema_migrate.py  test_sqlite_config.py  test_token_cache.py  test_url_intern.py  test_vector_codec.py
