[project]
name = "semsearch"
version = "0.1.0"
description = "Semantic search engine CLI using BM25"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "blake3>=1.0.0",
    "beautifulsoup4>=4.15.0",
    "fastembed>=0.8.0",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "huggingface-hub>=1.20.1",
    "langdetect>=1.0.9",
    "lxml>=6.1.1",
    "numpy>=2.4.6",
    "peewee[aiosqlite]>=4.0",
    "python-levenshtein>=0.27.3",
    "rank-bm25>=0.2.2",
    "rich>=15.0.0",
    "snowballstemmer>=3.1.1",
    "zstandard>=0.23.0",
]

[project.scripts]
crawl = "semsearch.crawl.crawler:main"
index = "semsearch.index.indexer:main"
search = "semsearch.cli:main"
migrate = "semsearch.migrate:main"
setup-models = "semsearch.setup_models:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["semsearch*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]
